# aws-mcp-simple-remote-server

./: .gitignore  README.md  pyproject.toml  server.py  test_agent.py
